--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       // Here, you can check the username and password against your database or any other authentication method
       // For simplicity, let's assume the username is "admin" and the password is "password"
-      if (username === "admin" && password === "password") {
+      if (username === "frank" && password === "frank") {
         // Redirect to the main content page
         window.location.href = "main.html";
       } else {
@@ -74,4 +74,5 @@
   </script>
 </body>
 </html>
+
 
