--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       // Here, you can check the username and password against your database or any other authentication method
       // For simplicity, let's assume the username is "admin" and the password is "password"
-      if (username === "admin" && password === "password") {
+      if (username === "fRANK" && password === "fRANK") {
         // Redirect to the main content page
         window.location.href = "main.html";
       } else {
