--- a/index.html
+++ b/index.html
@@ -1,103 +1,41 @@
-<!DOCTYPE html>
+apply good API "<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Store Management System - Login</title>
+  <title>Store Management System</title>
   <link rel="stylesheet" href="main.css">
-  <style>
-    /* Updated CSS for the login form */
-    body {
-      background-color: orange; /* Set the surrounding color to orange */
-    }
-
-    .login-container {
-      margin: 50px auto;
-      width: 300px;
-      border: 1px solid #ccc;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      background-color: #fff; /* Set the login form background to white */
-    }
-
-    .login-container h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .login-container input[type="text"],
-    .login-container input[type="password"],
-    .login-container button {
-      display: block;
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      box-sizing: border-box;
-    }
-
-    .login-container button {
-      background-color: #333;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    .login-container button:hover {
-      background-color: #555;
-    }
-
-    /* Style for show password checkbox */
-    .show-password-label {
-      display: block;
-      margin-top: 10px;
-    }
-
-  </style>
+  
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login to Store Management System</h2>
-    <form id="login-form">
-      <input type="text" id="username" name="username" placeholder="Username" required>
-      <input type="password" id="password" name="password" placeholder="Password" required>
-      <input type="checkbox" id="show-password-checkbox" class="show-password-checkbox">
-      <label for="show-password-checkbox" class="show-password-label">Show Password</label>
-      <button type="submit">Login</button>
-    </form>
-  </div>
+  <header>
+    <h1>Store Management System</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="inventory.html">Inventory</a></li> <!-- Link to Inventory page -->
+        <li><a href="#">Customers</a></li>
+        <li><a href="#">Orders</a></li>
+        <li><a href="#">Reports</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <!-- Your existing content -->
+    <section class="hero">
+      <h2>Welcome to the Store Management System</h2>
+      <p>Discover a world of efficiency and control with our comprehensive Store Management System. Streamline your operations, manage inventory effortlessly, and delight your customers with seamless experiences. Let us empower your business to thrive!</p>
+    </section>
 
-  <script>
-    document.getElementById("login-form").addEventListener("submit", function(event) {
-      event.preventDefault(); // Prevent form submission
+    
+  </main>
 
-      // Validate username and password (you can replace this with your validation logic)
-      var username = document.getElementById("username").value;
-      var password = document.getElementById("password").value;
-
-      // Here, you can check the username and password against your database or any other authentication method
-      // For simplicity, let's assume the username is "admin" and the password is "password"
-      if (username === "fRANK" && password === "fRANK") {
-        // Redirect to the main content page
-        window.location.href = "main.html";
-      } else {
-        alert("Invalid username or password. Please try again.");
-      }
-    });
-
-    // JavaScript to toggle password visibility
-    document.getElementById("show-password-checkbox").addEventListener("change", function() {
-      var passwordInput = document.getElementById("password");
-      if (passwordInput.type === "password") {
-        passwordInput.type = "text";
-      } else {
-        passwordInput.type = "password";
-      }
-    });
-  </script>
+  <footer>
+    <p>&copy; 2024 Store Management System</p>
+    &lt; &lt; &lt;&copy; <a href="about.html" target="_blank">Kibet Frank</a> &gt;&gt;&gt;
+    <a href="#">Back to Top</a>
+  </footer>
 </body>
 </html>
-
-
-
+"
