--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       
       if (username === "Frank" && password === "Frank") {
         // Redirect to the main content page
-        window.location.href = "index.html";
+        window.location.href = "main.html";
       } else {
         alert("Invalid username or password. Please try again.");
       }
