--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@ hr {
             <li>open  <a href="https//www.google.com/"target="_blank">google</a> in new tab.</li>
          </ul>
 <hr>
-<p> <a href="index.html"  > &lt; &lt;Back to home </a> &gt; &gt;
+<p> <a href="main.html"  > &lt; &lt;Back to home </a> &gt; &gt;
 </p>
 </body>   
 </HTML>
