--- a/main.html
+++ b/main.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Discover a world of efficiency and control with our comprehensive Store Management System. Streamline your operations, manage inventory effortlessly, and delight your customers with seamless experiences.">
+  <meta name="author" content="Frankline Kibet">
+  <meta property="og:title" content="Store Management System">
+  <meta property="og:description" content="Discover a world of efficiency and control with our comprehensive Store Management System. Streamline your operations, manage inventory effortlessly, and delight your customers with seamless experiences.">
+  <meta property="og:image" content="link-to-image.jpg">
+  <meta property="og:url" content="https://yourwebsite.com">
   <title>Store Management System</title>
   <link rel="stylesheet" href="main.css">
-  
 </head>
 <body>
   <header>
@@ -22,20 +27,17 @@
   </header>
   
   <main>
-    <!-- Your existing content -->
     <section class="hero">
       <h2>Welcome to the Store Management System</h2>
       <p>Discover a world of efficiency and control with our comprehensive Store Management System. Streamline your operations, manage inventory effortlessly, and delight your customers with seamless experiences. Let us empower your business to thrive!</p>
     </section>
-
-    
+    <!-- Additional content can go here -->
   </main>
 
   <footer>
-    <p>&copy; 2024 Store Management System</p>
-    &lt; &lt; &lt;&copy; <a href="about.html" target="_blank">Kibet Frank</a> &gt;&gt;&gt;
-    <a href="#">Back to Top</a>
+    <p>&copy; 2024 Store Management System. All rights reserved.</p>
+    <p><a href="about.html" target="_blank">&lt;&lt;&lt; Kibet Frank &gt;&gt;&gt;</a></p>
+    <p><a href="#">Back to Top</a></p>
   </footer>
 </body>
 </html>
-"
