--- a/index.html
+++ b/index.html
@@ -4,7 +4,118 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Store Management System</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .site-header, .site-footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .nav-links {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .nav-links li {
+      display: inline;
+      margin-right: 20px;
+    }
+
+    .nav-links a {
+      color: #fff;
+      text-decoration: none;
+    }
+
+    .nav-links a:hover {
+      text-decoration: underline;
+    }
+
+    .product-details {
+      text-align: center;
+      margin: 20px;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+    }
+
+    .product-image img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .price {
+      font-size: 1.2em;
+      color: #333;
+    }
+
+    button {
+      background-color: #f44336;
+      border: none;
+      color: #fff;
+      cursor: pointer;
+      padding: 12px 24px;
+      text-align: center;
+      text-decoration: none;
+      font-size: 1.2em;
+      margin-top: 10px;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #e53935;
+    }
+
+    .cart {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #4285f4;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 50px;
+      cursor: pointer;
+    }
+
+    .cart-items {
+      background-color: #fff;
+      color: #333;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 20px;
+      position: fixed;
+      top: 20%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: none;
+      z-index: 1000;
+    }
+
+    .cart-items ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .cart-items li {
+      border-bottom: 1px solid #ddd;
+      padding: 10px 0;
+    }
+
+    .cart-items .close {
+      background-color: #f44336;
+      color: #fff;
+      padding: 5px 10px;
+      border: none;
+      cursor: pointer;
+      float: right;
+    }
+  </style>
 </head>
 <body>
   <header class="site-header">
@@ -14,8 +125,6 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#" onclick="toggleCart()">Cart</a></li> <!-- Add Cart link -->
-        <li><a href="#" onclick="viewCart()">View Cart</a></li> <!-- Add View Cart link -->
       </ul>
     </nav>
   </header>
@@ -24,50 +133,44 @@
     <!-- Products will be dynamically added here -->
   </main>
 
-  <!-- Shopping Cart Section -->
-  <aside id="shopping-cart" class="shopping-cart">
-    <h2>Shopping Cart</h2>
-    <ul id="cart-items">
-      <!-- Cart items will be dynamically added here -->
-    </ul>
-    <button onclick="checkout()">Checkout</button>
-    <button onclick="toggleCart()">Close Cart</button>
-  </aside>
-
   <footer class="site-footer">
     <p>&copy; 2024 Store Management System</p>
   </footer>
 
+  <div class="cart" onclick="toggleCart()">View Cart</div>
+
+  <div class="cart-items" id="cart-items">
+    <button class="close" onclick="toggleCart()">Close</button>
+    <h2>Cart Items</h2>
+    <ul id="cart-list">
+      <!-- Cart items will be dynamically added here -->
+    </ul>
+  </div>
+
   <script>
-    // Sample product data (you can replace this with actual data)
+    // Sample product data
     const products = [
       { id: 1, name: "Samsung Galaxy A23", image: "img/samsung-a23.png", description: "The Samsung Galaxy A23 comes with a 6.6-inch display and Qualcomm Snapdragon 680 processor. Specs also include a 5000mAh battery with 15W charging speed, Quad camera setup on the back with a 50MP main sensor, and an 8MP front selfie camera.", price: 299.99 },
       { id: 2, name: "Apple iPhone 13", image: "img/iphone-13.png", description: "The Apple iPhone 13 features a Super Retina XDR display, A15 Bionic chip, and Dual 12MP camera system with Night mode. It comes with iOS 15 and supports 5G connectivity.", price: 799.99 },
-      // Add more products as needed
+      { id: 3, name: "Google Pixel 6", image: "img/pixel-6.png", description: "Google Pixel 6 features a 6.4-inch display, Google Tensor processor, and a 50MP main camera. It comes with Android 12 and supports 5G connectivity.", price: 599.99 },
+      { id: 4, name: "OnePlus 9", image: "img/oneplus-9.png", description: "OnePlus 9 comes with a 6.55-inch Fluid AMOLED display, Snapdragon 888 processor, and a 48MP main camera. It supports 5G and comes with Android 11.", price: 729.99 },
+      { id: 5, name: "Sony Xperia 5 III", image: "img/xperia-5.png", description: "Sony Xperia 5 III features a 6.1-inch OLED display, Snapdragon 888 processor, and a triple camera setup with 12MP sensors. It supports 5G and comes with Android 11.", price: 999.99 },
+      { id: 6, name: "Xiaomi Mi 11", image: "img/mi-11.png", description: "Xiaomi Mi 11 features a 6.81-inch AMOLED display, Snapdragon 888 processor, and a 108MP main camera. It supports 5G and comes with MIUI 12 based on Android 11.", price: 749.99 },
+      { id: 7, name: "Oppo Find X3 Pro", image: "img/find-x3-pro.png", description: "Oppo Find X3 Pro comes with a 6.7-inch AMOLED display, Snapdragon 888 processor, and a quad-camera setup with 50MP sensors. It supports 5G and comes with ColorOS 11.2 based on Android 11.", price: 1099.99 },
+      { id: 8, name: "Huawei P50 Pro", image: "img/p50-pro.png", description: "Huawei P50 Pro features a 6.6-inch OLED display, Kirin 9000 processor, and a quad-camera setup with 50MP sensors. It supports 5G and comes with HarmonyOS 2.0.", price: 999.99 },
+      { id: 9, name: "Motorola Edge 20 Pro", image: "img/edge-20-pro.png", description: "Motorola Edge 20 Pro features a 6.7-inch OLED display, Snapdragon 870 processor, and a 108MP main camera. It supports 5G and comes with Android 11.", price: 699.99 },
+      { id: 10, name: "Nokia X20", image: "img/nokia-x20.png", description: "Nokia X20 comes with a 6.67-inch IPS LCD display, Snapdragon 480 processor, and a quad-camera setup with 64MP main sensor. It supports 5G and comes with Android 11.", price: 399.99 },
+      { id: 11, name: "Realme GT", image: "img/realme-gt.png", description: "Realme GT features a 6.43-inch Super AMOLED display, Snapdragon 888 processor, and a 64MP main camera. It supports 5G and comes with Realme UI 2.0 based on Android 11.", price: 549.99 },
+      { id: 12, name: "Asus ROG Phone 5", image: "img/rog-phone-5.png", description: "Asus ROG Phone 5 comes with a 6.78-inch AMOLED display, Snapdragon 888 processor, and a 64MP main camera. It supports 5G and comes with ROG UI based on Android 11.", price: 999.99 },
+      { id: 13, name: "Vivo X60 Pro", image: "img/x60-pro.png", description: "Vivo X60 Pro features a 6.56-inch AMOLED display, Snapdragon 870 processor, and a triple camera setup with 48MP main sensor. It supports 5G and comes with Funtouch OS 11.1 based on Android 11.", price: 799.99 },
+      { id: 14, name: "Lenovo Legion Phone Duel", image: "img/legion-duel.png", description: "Lenovo Legion Phone Duel comes with a 6.65-inch AMOLED display, Snapdragon 865+ processor, and a 64MP main camera. It supports 5G and comes with ZUI 12 based on Android 10.", price: 899.99 },
+      { id: 15, name: "LG Wing", image: "img/lg-wing.png", description: "LG Wing features a 6.8-inch P-OLED display, Snapdragon 765G processor, and a triple camera setup with 64MP main sensor. It supports 5G and comes with Android 10.", price: 999.99 },
+      { id: 16, name: "ZTE Axon 30 Ultra", image: "img/axon-30-ultra.png", description: "ZTE Axon 30 Ultra comes with a 6.67-inch AMOLED display, Snapdragon 888 processor, and a quad-camera setup with 64MP sensors. It supports 5G and comes with MyOS 11 based on Android 11.", price: 749.99 },
+      { id: 17, name: "TCL 20 Pro 5G", image: "img/tcl-20-pro.png", description: "TCL 20 Pro 5G features a 6.67-inch AMOLED display, Snapdragon 750G processor, and a quad-camera setup with 48MP main sensor. It supports 5G and comes with Android 11.", price: 529.99 },
+      { id: 18, name: "Micromax IN Note 2", image: "img/in-note-2.png", description: "Micromax IN Note 2 comes with a 6.43-inch AMOLED display, MediaTek Helio G95 processor, and a quad-camera setup with 48MP main sensor. It supports 4G and comes with Android 11.", price: 299.99 },
+      { id: 19, name: "Infinix Zero X Pro", image: "img/zero-x-pro.png", description: "Infinix Zero X Pro features a 6.67-inch AMOLED display, MediaTek Helio G95 processor, and a triple camera setup with 108MP main sensor. It supports 4G and comes with XOS 7.6 based on Android 11.", price: 399.99 },
+      { id: 20, name: "Tecno Camon 17 Pro", image: "img/camon-17-pro.png", description: "Tecno Camon 17 Pro comes with a 6.8-inch IPS LCD display, MediaTek Helio G95 processor, and a quad-camera setup with 64MP main sensor. It supports 4G and comes with Android 11.", price: 249.99 },
     ];
-
-    // Generate random product data
-    function generateRandomProduct(id) {
-      const randomName = `Product ${id}`;
-      const randomImage = `img/product-${id}.png`;
-      const randomDescription = `This is a description for Product ${id}. Lorem ipsum dolor sit amet, consectetur adipiscing elit.`;
-      const randomPrice = Math.floor(Math.random() * 1000) + 50; // Random price between $50 and $1050
-
-      return { id, name: randomName, image: randomImage, description: randomDescription, price: randomPrice };
-    }
-
-    // Function to generate random products
-    function generateRandomProducts(numProducts) {
-      const randomProducts = [];
-      for (let i = 3; i <= numProducts + 2; i++) {
-        randomProducts.push(generateRandomProduct(i));
-      }
-      return randomProducts;
-    }
-
-    // Add random products to the products array
-    const randomProducts = generateRandomProducts(30);
-    products.push(...randomProducts);
 
     // Function to generate product HTML
     function generateProductHTML(product) {
@@ -79,7 +182,7 @@
           </div>
           <div class="product-description">
             <p>${product.description}</p>
-            <p class="price">$${product.price.toFixed(2)}</p>
+            <p class="price">Price: $${product.price}</p>
             <button onclick="addToCart(${product.id})">Add to Cart</button>
           </div>
         </section>
@@ -97,43 +200,31 @@
     // Call function to add products when the page loads
     window.onload = addProductsToDOM;
 
-    // Function to add item to cart
-    let cartItems = [];
-    function addToCart(productId) {
-      const product = products.find(p => p.id === productId);
-      cartItems.push(product);
-      updateCartDisplay();
-    }
+    // Cart array to store added products
+    let cart = [];
 
-    // Function to update cart display
-    function updateCartDisplay() {
-      const cartList = document.getElementById("cart-items");
-      cartList.innerHTML = "";
-      cartItems.forEach((item) => {
-        const li = document.createElement("li");
-        li.textContent = `${item.name} - $${item.price.toFixed(2)}`;
-        cartList.appendChild(li);
-      });
+    // Function to add product to cart
+    function addToCart(productId) {
+      const product = products.find((prod) => prod.id === productId);
+      cart.push(product);
+      alert('Product added to cart!');
     }
 
     // Function to toggle cart visibility
     function toggleCart() {
-      const cart = document.getElementById("shopping-cart");
-      cart.classList.toggle("show-cart");
-    }
-
-    // Function to view cart
-    function viewCart() {
-      toggleCart(); // Open the cart if it's closed
-    }
-
-    // Function to simulate checkout
-    function checkout() {
-      alert("Checkout functionality would be implemented here.");
-      // You can add logic to process the cartItems array (e.g., send to server, clear cart, etc.)
-      cartItems = []; // Clear cart after checkout
-      updateCartDisplay(); // Update cart display
-      toggleCart(); // Close cart after checkout
+      const cartItems = document.getElementById("cart-items");
+      const cartList = document.getElementById("cart-list");
+      if (cartItems.style.display === "none" || cartItems.style.display === "") {
+        // Show cart
+        cartItems.style.display = "block";
+        cartList.innerHTML = "";
+        cart.forEach((item) => {
+          cartList.innerHTML += `<li>${item.name} - $${item.price}</li>`;
+        });
+      } else {
+        // Hide cart
+        cartItems.style.display = "none";
+      }
     }
   </script>
 </body>
